fix(UserManagement): align "ADD USER" button

--- a/pdpms-frontend/src/modules/Settings/submodules/UserManagement.css
+++ b/pdpms-frontend/src/modules/Settings/submodules/UserManagement.css
@@ -273,14 +273,17 @@
 
 /* Add User Button */
 .UserManagement-AddUserRow {
-  display: flex;
+  position: absolute;
   justify-content: flex-end;
   align-items: center;
-  width: 100%;
-  margin-top: 1.1rem;
+  bottom: 22.5rem;
+  right: 2.5rem;
+  width: auto;
   background: transparent;
-  padding: 0.5rem 0 0 0;
-  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  z-index: 10;
+
 }
 
 .UserManagement-AddUser {
